<resources>
    <string name="app_name">PT ECO TUMBUH MAKMUR</string>

    <string name="add_schedule">Add Jadwal</string>
    <string name="add_detail_schedule">Add Detail Jadwal</string>
    <string name="add_tki">Add TKI</string>
    <string name="already_registered">Already registered?</string>
    <string name="login">Login</string>
    <string name="profile">Profil</string>
    <string name="comma">,\u0020</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Jadwal</string>
    <string name="title_score">Nilai</string>
    <string name="welcome">Welcome,</string>
    <string name="options_menu">options_menu</string>
    <string name="logout">Logout</string>
    <string name="subject">Subject</string>
    <string name="hari">Hari</string>
    <string name="date_format">yyyy-mm-dd</string>
    <string name="tanggal_mulai">Tanggal mulai:</string>
    <string name="tanggal_selesai">Tanggal selesai:</string>
    <string name="jam_mulai">Jam mulai:</string>
    <string name="jam_selesai">Jam selesai:</string>
    <string name="time_format">hh:mm:ss</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bahasa_mandarin">Bahasa Mandarin</string>
    <string name="tata_krama">Tata Krama</string>
    <string name="schedule">Schedule</string>
    <string name="score">Score</string>
    <string name="no_schedule">Anda belum memiliki jadwal</string>
    <string name="no_score">Anda belum memiliki nilai</string>
    <string name="title_attendance">Kehadiran</string>
    <string name="pelatih">Pelatih</string>
    <string name="user">User</string>
    <string name="tanggal">Tanggal:</string>
    <string name="add">Add</string>
    <string name="add_detail_jadwal">Add detail jadwal</string>
    <string name="delete_detail_jadwal">delete detail jadwal</string>
    <string name="fab">Floating Action Button</string>
    <string name="select_tki">Pilih TKI</string>
    <string name="add_hrd">Tambah HRD</string>
    <string name="add_coach">Tambah Pelatih</string>
    <string name="send_tki">Pengiriman TKI</string>
    <string name="check_payment">Periksa Pembayaran</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User HRD</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hrd">HRD</string>
    <string name="check_document">Periksa Dokumen</string>
    <string name="data_tki">Data User (TKI)</string>
    <string name="pt_eco_tumbuh_makmur">PT ECO TUMBUH MAKMUR</string>
    <string name="search_hint">Search name</string>
    <string name="foto">foto</string>
    <string name="id_user">ID user: 212020001</string>
    <string name="biodata">Biodata</string>
    <string name="dokumen">Dokumen</string>
    <string name="year_active">Active since: 2020</string>
    <string name="nilai">Nilai</string>
    <string name="siap_di_kirim">SIAP DI KIRIM</string>
</resources>