<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_more"
        android:icon="@drawable/more_18dp"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:title="@string/options_menu">
        <menu>
            <item
                android:id="@+id/item_profile"
                android:icon="@drawable/account_18dp"
                android:title="@string/profile"
                app:showAsAction="ifRoom|withText" />
            <item
                android:id="@+id/item_logout"
                android:icon="@drawable/power_settings_18dp"
                android:title="@string/logout"
                app:showAsAction="ifRoom|withText" />
        </menu>
    </item>
</menu>