<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_sendname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_dataphoto"
                tools:text="@string/user"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_sendactive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_sendname"
                tools:text="@string/year_active"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_siapdikirim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_centerVertical="true"
                android:text="@string/siap_di_kirim"
                android:clickable="true"
                android:textColor="@color/green"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="16sp"
                android:focusable="true" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>